# ticktacktoe

./: BUILD  README  README.md  WORKSPACE
client/: BUILD.bazel  client.go  client_test.go
client/cmd/: BUILD.bazel  client.go  client_test.go  main.go
client/main/: BUILD.bazel  main.go
client/web/main/: BUILD.bazel  main.go
client/web/static/: BUILD  board.js  client.js  debug_console.js  index.html  phaser_extern.js
game/: BUILD.bazel  board.go  board_test.go  game.go  game_test.go  player.go
model/board/: BUILD.bazel  board.go  board_test.go
model/player/: BUILD.bazel  player.go
proto/: BUILD
proto/mock_ticktacktoe_proto/: BUILD.bazel  mock.go
proto/ticktacktoe_proto/: BUILD  ticktacktoe.proto
server/: BUILD.bazel  main.go  server.go  server_test.go
server/client/: BUILD.bazel  client.go
server/game/: BUILD.bazel  game.go  game_test.go
server/main/: BUILD.bazel  main.go
testing/: testplay.sh
