load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    visibility = ["//visibility:public"],
    deps = ["//proto/ticktacktoe_proto:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["server_test.go"],
    library = ":go_default_library",
    deps = ["//proto/ticktacktoe_proto:go_default_library"],
)
