load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "server.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//proto/ticktacktoe_proto:go_default_library",
        "//server/game:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["server_test.go"],
    library = ":go_default_library",
    deps = ["//proto/ticktacktoe_proto:go_default_library"],
)

go_binary(
    name = "server",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
