load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["board.go"],
    visibility = ["//visibility:public"],
    deps = ["//model/player:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["board_test.go"],
    library = ":go_default_library",
    deps = ["//model/player:go_default_library"],
)
