load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["game.go"],
    visibility = ["//visibility:public"],
    deps = [
        "//model/board:go_default_library",
        "//model/player:go_default_library",
        "//proto/ticktacktoe_proto:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["game_test.go"],
    library = ":go_default_library",
    deps = [
        "//model/player:go_default_library",
        "//proto/mock_ticktacktoe_proto:go_default_library",
        "//proto/ticktacktoe_proto:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
    ],
)
